Fixed too wide selectors for file inputs

--- a/button/skin-islands-button.styl
+++ b/button/skin-islands-button.styl
@@ -69,7 +69,7 @@ skin-islands-proto-button()
         padding: ($islands_xs - 0.2*rem) ($islands_m - 0.2*rem)
 
   unless no-active in arguments
-    input:active + &,
+    input[type=file]:active + &,
     &:not({$skin-islands-button-disabled}):active
       skin-islands-button_pressed(arguments)
 
@@ -83,7 +83,7 @@ skin-islands-proto-button()
   //   -moz-transition: box-shadow 0.1s 999s
 
   unless no-focus in arguments
-    input:focus + &,
+    input[type=file]:focus + &,
     &:not({$skin-islands-button-disabled}):focus
       skin-islands-button_focus(arguments)
 
@@ -104,7 +104,7 @@ skin-islands-button()
     border-color: #CBCBCB #B2B2B2 #9A9A9A
 
   unless no-hover in arguments
-    input:hover:not(:checked) + &,
+    input[type=file]:hover + &,
     &:not({$skin-islands-button-disabled}):hover
       skin-islands-button_hover()
 
@@ -125,7 +125,7 @@ skin-islands-action-button()
     border-color: #BFB298 #A99C82 #9B8E75
 
   unless no-hover in arguments
-    input:hover:not(:checked) + &,
+    input[type=file]:hover:not(:checked) + &,
     &:not({$skin-islands-button-disabled}):hover
       skin-islands-action-button_hover()
 
